# chatbot

./: .gitignore  README.md  brain_v2.py  brain_v2g.py  data  main.py  pyproject.toml
