[project]
name = "chatbot-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "google-generativeai>=0.8.6",
    "groq>=1.1.2",
    "numpy<2.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
    "torch>=2.11.0",
]
